have all  questions written and html organzied. Bug fixed  where  question not showing. CSS elements style

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-
+  background-color: #b0e0e6;
 }
 
 img {
